# rp-pico-midi

./: Cargo.toml  README.md
.github/workflows/: release-packaging.yaml
src/: button.rs  main.rs  midi.rs
